Update kube controller manager service monitor selector

--- a/kubernetes/apps/monitoring/kube-prometheus-stack/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/kube-prometheus-stack/helmrelease.yaml
@@ -82,6 +82,8 @@ spec:
           targetPort: 10257
         serviceMonitor:
           insecureSkipVerify: true
+          selector:
+            k8s-app: kube-controller-manager
       coreDns:
         enabled: true
       kubeEtcd:
