--- a/kubernetes/apps/monitoring/kube-prometheus-stack/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/kube-prometheus-stack/helmrelease.yaml
@@ -78,7 +78,8 @@ spec:
         service:
           port: 10257
           targetPort: 10257
-          k8s-app: kube-controller-manager
+          selector:
+            k8s-app: kube-controller-manager
         serviceMonitor:
           insecureSkipVerify: true
       coreDns:
