Enable drift detector for kube prom stack

--- a/kubernetes/apps/monitoring/kube-prometheus-stack/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/kube-prometheus-stack/helmrelease.yaml
@@ -22,7 +22,7 @@ spec:
   upgrade:
     crds: Create
   driftDetection:
-    mode: warn
+    mode: enabled
     ignore:
       - paths:
           - "/metadata/annotations/prometheus-operator-validated"
