--- a/kubernetes/apps/monitoring/kube-prometheus-stack/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/kube-prometheus-stack/helmrelease.yaml
@@ -77,6 +77,7 @@ spec:
     kubeControllerManager:
       enabled: true
       service:
+        enabled: false
         port: 10257
         targetPort: 10257
         selector:
@@ -86,15 +87,19 @@ spec:
     coreDns:
       enabled: true
       service:
+        enabled: false
         selector:
           k8s-app: kube-dns
     kubeEtcd:
       enabled: true
       endpoints:
         - 192.168.1.135
+      service:
+        enabled: false
     kubeScheduler:
       enabled: true
       service:
+        enabled: false
         port: 10259
         targetPort: 10259
         selector:
@@ -104,6 +109,7 @@ spec:
     kubeProxy:
       enabled: true
       service:
+        enabled: false
         selector:
           k8s-app: kube-proxy
     prometheus:
