--- a/kubernetes/apps/monitoring/kube-prometheus-stack/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/kube-prometheus-stack/helmrelease.yaml
@@ -92,8 +92,8 @@ spec:
           k8s-app: kube-dns
     kubeEtcd:
       enabled: true
-      endpoints:
-        - 192.168.1.135
+#      endpoints:
+#        - 192.168.1.135
       service:
         enabled: false
     kubeScheduler:
