--- a/kubernetes/apps/network/k8s-gateway/app/helmrelease.yaml
+++ b/kubernetes/apps/network/k8s-gateway/app/helmrelease.yaml
@@ -21,6 +21,13 @@ spec:
     remediation:
       retries: 3
   values:
+    image:
+      registry: quay.io
+      repository: oriedge/k8s_gateway
+      tag: v0.4.0
+      pullPolicy: IfNotPresent
+    customLabels:
+      k8s-app: k8s-gateway
     fullnameOverride: k8s-gateway
     domain: "${SECRET_DOMAIN}"
     ttl: 1
