--- a/kubernetes/apps/network/k8s-gateway/app/service-monitor.yaml
+++ b/kubernetes/apps/network/k8s-gateway/app/service-monitor.yaml
@@ -1,7 +1,7 @@
 apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
-  name: coredns
+  name: k8s-gateway
   namespace: monitoring
 spec:
   selector:
