Add service monitor for k8s gateway

--- a/kubernetes/apps/network/k8s-gateway/app/service-monitor.yaml
+++ b/kubernetes/apps/network/k8s-gateway/app/service-monitor.yaml
@@ -4,6 +4,7 @@ metadata:
   name: k8s-gateway
   namespace: monitoring
 spec:
+  jobLabel: k8s-gateway
   selector:
     matchLabels:
       k8s-app: k8s-gateway
