--- a/kubernetes/apps/network/k8s-gateway/app/service-monitor.yaml
+++ b/kubernetes/apps/network/k8s-gateway/app/service-monitor.yaml
@@ -2,7 +2,7 @@ apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
   name: k8s-gateway
-  namespace: monitoring
+  namespace: network
 spec:
   jobLabel: k8s-gateway
   selector:
