--- a/kubernetes/apps/default/sonarr/kustomization.yaml
+++ b/kubernetes/apps/default/sonarr/kustomization.yaml
@@ -2,3 +2,11 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - sonarr.yaml
+configMapGenerator:
+  - name: sonarr-grafana-dashboards
+    namespace: default
+    options:
+      labels:
+        grafana_dashboard: "1"
+    files:
+      - ./dashboards/sonarr-dashboard.json
