--- a/kubernetes/apps/monitoring/kube-prometheus-stack/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/kube-prometheus-stack/helmrelease.yaml
@@ -128,25 +128,25 @@ spec:
         ruleSelectorNilUsesHelmValues: false
         probeSelectorNilUsesHelmValues: false
         scrapeConfigSelectorNilUsesHelmValues: false
-        additionalScrapeConfigs:
-          - job_name: 'istiod'
-            kubernetes_sd_configs:
-              - role: endpoints
-                namespaces:
-                  names:
-                    - istio-system
-            relabel_configs:
-              - source_labels: [ __meta_kubernetes_service_name, __meta_kubernetes_endpoint_port_name ]
-                action: keep
-                regex: istiod;http-monitoring
-          - job_name: 'envoy-stats'
-            metrics_path: /stats/prometheus
-            kubernetes_sd_configs:
-              - role: pod
-                namespaces:
-                  names:
-                    - default
-            relabel_configs:
-              - source_labels: [ __meta_kubernetes_pod_container_port_name ]
-                action: keep
-                regex: '.*-envoy-prom'
+#        additionalScrapeConfigs:
+#          - job_name: 'istiod'
+#            kubernetes_sd_configs:
+#              - role: endpoints
+#                namespaces:
+#                  names:
+#                    - istio-system
+#            relabel_configs:
+#              - source_labels: [ __meta_kubernetes_service_name, __meta_kubernetes_endpoint_port_name ]
+#                action: keep
+#                regex: istiod;http-monitoring
+#          - job_name: 'envoy-stats'
+#            metrics_path: /stats/prometheus
+#            kubernetes_sd_configs:
+#              - role: pod
+#                namespaces:
+#                  names:
+#                    - default
+#            relabel_configs:
+#              - source_labels: [ __meta_kubernetes_pod_container_port_name ]
+#                action: keep
+#                regex: '.*-envoy-prom'
