Trying to fix istio metrics

--- a/kubernetes/apps/istio/istio-d.yaml
+++ b/kubernetes/apps/istio/istio-d.yaml
@@ -110,7 +110,7 @@ spec:
       injectionURL: ""
     # https://istio.io/latest/docs/reference/config/istio.mesh.v1alpha1/#MeshConfig
     meshConfig:
-      enablePrometheusMerge: true
+      enablePrometheusMerge: false
       enableTracing: true
       ingressClass: istio-ingress
       defaultProviders:
