--- a/kubernetes/apps/istio/kustomization.yaml
+++ b/kubernetes/apps/istio/kustomization.yaml
@@ -11,6 +11,7 @@ resources:
 #  - ./jaeger
   - ./istio-otel-collector.yaml
   - ./tracing-config.yaml
+  - ./prom-monitors.yaml
 #configMapGenerator:
 #  - name: istio-grafana-dashboards
 #    namespace: monitoring
