Update radarr sonarr exportarr image

--- a/kubernetes/apps/default/radarr/radarr.yaml
+++ b/kubernetes/apps/default/radarr/radarr.yaml
@@ -71,3 +71,11 @@ spec:
         size: 250Gi
     metrics:
       enabled: true
+      exporter:
+        image:
+          # -- image repository
+          repository: ghcr.io/onedr0p/exportarr
+          # -- image tag
+          tag: v2.0.1
+          # -- image pull policy
+          pullPolicy: IfNotPresent
