--- a/kubernetes/apps/default/radarr-new/kustomization.yaml
+++ b/kubernetes/apps/default/radarr-new/kustomization.yaml
@@ -1,6 +1,5 @@
----
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ./tautulli.yaml
   - ./radarr.yaml
+  - ./radarr-apikey.sops.secret.yaml
