--- a/kubernetes/apps/default/radarr-new/kustomization.yaml
+++ b/kubernetes/apps/default/radarr-new/kustomization.yaml
@@ -2,4 +2,4 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ./radarr.yaml
-  - ./radarr-apikey.sops.secret.yaml
+  - ./secret.sops.yaml
