Disable metrics for old radarr

--- a/kubernetes/apps/default/radarr/radarr.yaml
+++ b/kubernetes/apps/default/radarr/radarr.yaml
@@ -70,7 +70,7 @@ spec:
         existingClaim: media-pvc-ssd
         size: 250Gi
     metrics:
-      enabled: true
+      enabled: false
       exporter:
         image:
           # -- image repository
