Enable service monitor for promtail

--- a/kubernetes/apps/monitoring/loki/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/loki/helmrelease.yaml
@@ -24,6 +24,8 @@ spec:
           enabled: true
           serviceMonitor:
             enabled: false
+      serviceMonitor:
+        enabled: true
     loki:
       enabled: true
       image:
