--- a/kubernetes/apps/default/radarr-new/radarr.yaml
+++ b/kubernetes/apps/default/radarr-new/radarr.yaml
@@ -32,10 +32,17 @@ spec:
             paths:
               - path: /
                 pathType: Prefix
+          - host: radarr.internal.${SECRET_DOMAIN}
+            paths:
+              - path: /
+                pathType: Prefix
         tls:
           - secretName: radarr-new-tls
             hosts:
               - *host
+          - secretName: radarr-tls
+            hosts:
+              - radarr.internal.${SECRET_DOMAIN}
         integrations:
           traefik:
             enabled: false
