--- a/kubernetes/apps/network/ingress-nginx/internal/helmrelease.yaml
+++ b/kubernetes/apps/network/ingress-nginx/internal/helmrelease.yaml
@@ -60,13 +60,13 @@ spec:
             drop:
               - ALL
           readOnlyRootFilesystem: true
-        resources: {}
+        resources: { }
       admissionWebhooks:
         objectSelector:
           matchExpressions:
             - key: ingress-class
               operator: In
-              values: ["internal"]
+              values: [ "internal" ]
       config:
         enable-opentelemetry: "true"
         opentelemetry-operation-name: "HTTP $request_method $service_name $uri"
@@ -90,11 +90,46 @@ spec:
         keep-alive: 120
         log-format-escape-json: "true"
         log-format-upstream: >
-          {"time": "$time_iso8601", "remote_addr": "$proxy_protocol_addr", "x_forwarded_for": "$proxy_add_x_forwarded_for",
-          "request_id": "$req_id", "remote_user": "$remote_user", "bytes_sent": $bytes_sent, "request_time": $request_time,
-          "status": $status, "vhost": "$host", "request_proto": "$server_protocol", "path": "$uri", "request_query": "$args",
-          "request_length": $request_length, "duration": $request_time, "method": "$request_method", "http_referrer": "$http_referer",
-          "http_user_agent": "$http_user_agent"}
+          {
+            "msec": "$msec",
+            "connection": "$connection",
+            "connection_requests": "$connection_requests",
+            "pid": "$pid",
+            "request_id": "$request_id",
+            "request_length": "$request_length",
+            "remote_addr": "$remote_addr",
+            "remote_user": "$remote_user",
+            "remote_port": "$remote_port",
+            "time_local": "$time_local",
+            "time_iso8601": "$time_iso8601",
+            "request": "$request",
+            "request_uri": "$request_uri",
+            "args": "$args",
+            "status": "$status",
+            "body_bytes_sent": "$body_bytes_sent",
+            "bytes_sent": "$bytes_sent",
+            "http_referer": "$http_referer",
+            "http_user_agent": "$http_user_agent",
+            "http_x_forwarded_for": "$http_x_forwarded_for",
+            "http_host": "$http_host",
+            "server_name": "$server_name",
+            "request_time": "$request_time",
+            "upstream": "$upstream_addr",
+            "upstream_connect_time": "$upstream_connect_time",
+            "upstream_header_time": "$upstream_header_time",
+            "upstream_response_time": "$upstream_response_time",
+            "upstream_response_length": "$upstream_response_length",
+            "upstream_cache_status": "$upstream_cache_status",
+            "ssl_protocol": "$ssl_protocol",
+            "ssl_cipher": "$ssl_cipher",
+            "scheme": "$scheme",
+            "request_method": "$request_method",
+            "server_protocol": "$server_protocol",
+            "pipe": "$pipe",
+            "gzip_ratio": "$gzip_ratio",
+            "http_cf_ray": "$http_cf_ray",
+            "geoip_country_code": "$geoip_country_code"
+          }
         proxy-body-size: 0
         proxy-buffer-size: 16k
         ssl-protocols: TLSv1.3 TLSv1.2
