--- a/kubernetes/apps/monitoring/loki/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/loki/helmrelease.yaml
@@ -47,3 +47,6 @@ spec:
         table_manager:
           retention_deletes_enabled: true
           retention_period: 12h
+        limits_config:
+          max_query_series: 100000
+          max_query_parallelism: 2
