--- a/kubernetes/apps/monitoring/kube-prometheus-stack/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/kube-prometheus-stack/helmrelease.yaml
@@ -60,6 +60,10 @@ spec:
         repository: grafana/grafana
         # Overrides the Grafana image tag whose default is the chart appVersion
         tag: 11.2.0
+      sidecar:
+        prune: true
+        datasources:
+          enabled: false
       ingress:
         enabled: true
         ingressClassName: internal
