Remove grafana datasources

--- a/kubernetes/apps/monitoring/kube-prometheus-stack/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/kube-prometheus-stack/helmrelease.yaml
@@ -63,7 +63,7 @@ spec:
       sidecar:
         prune: true
         datasources:
-          enabled: false
+          enabled: true
       ingress:
         enabled: true
         ingressClassName: internal
