--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,141 @@ Brewfile.lock.json
 wiki
 # Bootstrap
 /config.yaml
+/app-template/charts/common/schemas/configmap.json
+/app-template/charts/common/schemas/containers.json
+/app-template/charts/common/schemas/controllers.json
+/app-template/charts/common/schemas/definitions.json
+/app-template/charts/common/schemas/envVars.json
+/app-template/charts/common/schemas/ingress.json
+/app-template/charts/common/schemas/k8s-api.json
+/app-template/charts/common/schemas/networkpolicy.json
+/app-template/charts/common/schemas/persistence.json
+/app-template/charts/common/schemas/pod.json
+/app-template/charts/common/schemas/rawResource.json
+/app-template/charts/common/schemas/route.json
+/app-template/charts/common/schemas/secret.json
+/app-template/charts/common/schemas/service.json
+/app-template/charts/common/schemas/serviceAccount.json
+/app-template/charts/common/schemas/serviceMonitor.json
+/app-template/charts/common/templates/classes/_configmap.tpl
+/app-template/charts/common/templates/classes/_cronjob.tpl
+/app-template/charts/common/templates/classes/_daemonset.tpl
+/app-template/charts/common/templates/classes/_deployment.tpl
+/app-template/charts/common/templates/classes/_ingress.tpl
+/app-template/charts/common/templates/classes/_job.tpl
+/app-template/charts/common/templates/classes/_networkpolicy.tpl
+/app-template/charts/common/templates/classes/_pvc.tpl
+/app-template/charts/common/templates/classes/_rawResource.tpl
+/app-template/charts/common/templates/classes/_route.tpl
+/app-template/charts/common/templates/classes/_secret.tpl
+/app-template/charts/common/templates/classes/_service.tpl
+/app-template/charts/common/templates/classes/_serviceAccount.tpl
+/app-template/charts/common/templates/classes/_serviceMonitor.tpl
+/app-template/charts/common/templates/classes/_statefulset.tpl
+/app-template/charts/common/templates/lib/chart/_defaultKeepNonNullValue.tpl
+/app-template/charts/common/templates/lib/chart/_getMapItemsWithKey.tpl
+/app-template/charts/common/templates/lib/chart/_kahn.tpl
+/app-template/charts/common/templates/lib/chart/_names.tpl
+/app-template/charts/common/templates/lib/chart/_validate.tpl
+/app-template/charts/common/templates/lib/configMap/_getByIdentifier.tpl
+/app-template/charts/common/templates/lib/configMap/_validate.tpl
+/app-template/charts/common/templates/lib/configMap/_valuesToObject.tpl
+/app-template/charts/common/templates/lib/container/fields/_args.tpl
+/app-template/charts/common/templates/lib/container/fields/_command.tpl
+/app-template/charts/common/templates/lib/container/fields/_env.tpl
+/app-template/charts/common/templates/lib/container/fields/_envFrom.tpl
+/app-template/charts/common/templates/lib/container/fields/_image.tpl
+/app-template/charts/common/templates/lib/container/fields/_name.tpl
+/app-template/charts/common/templates/lib/container/fields/_probes.tpl
+/app-template/charts/common/templates/lib/container/fields/_volumeMounts.tpl
+/app-template/charts/common/templates/lib/container/_spec.tpl
+/app-template/charts/common/templates/lib/container/_validate.tpl
+/app-template/charts/common/templates/lib/container/_valuesToObject.tpl
+/app-template/charts/common/templates/lib/controller/_enabled_containers.tpl
+/app-template/charts/common/templates/lib/controller/_enabled_controllers.tpl
+/app-template/charts/common/templates/lib/controller/_getByIdentifier.tpl
+/app-template/charts/common/templates/lib/controller/_metadata.tpl
+/app-template/charts/common/templates/lib/controller/_validate.tpl
+/app-template/charts/common/templates/lib/controller/_valuesToObject.tpl
+/app-template/charts/common/templates/lib/cronjob/_validate.tpl
+/app-template/charts/common/templates/lib/cronjob/_valuesToObject.tpl
+/app-template/charts/common/templates/lib/daemonset/_validate.tpl
+/app-template/charts/common/templates/lib/daemonset/_valuesToObject.tpl
+/app-template/charts/common/templates/lib/deployment/_validate.tpl
+/app-template/charts/common/templates/lib/deployment/_valuesToObject.tpl
+/app-template/charts/common/templates/lib/ingress/_enabled_ingresses.tpl
+/app-template/charts/common/templates/lib/ingress/_validate.tpl
+/app-template/charts/common/templates/lib/ingress/_valuesToObject.tpl
+/app-template/charts/common/templates/lib/job/_validate.tpl
+/app-template/charts/common/templates/lib/job/_valuesToObject.tpl
+/app-template/charts/common/templates/lib/metadata/_allLabels.tpl
+/app-template/charts/common/templates/lib/metadata/_globalAnnotations.tpl
+/app-template/charts/common/templates/lib/metadata/_globalLabels.tpl
+/app-template/charts/common/templates/lib/metadata/_selectorLabels.tpl
+/app-template/charts/common/templates/lib/networkpolicy/_enabled_networkpolicies.tpl
+/app-template/charts/common/templates/lib/networkpolicy/_validate.tpl
+/app-template/charts/common/templates/lib/networkpolicy/_valuesToObject.tpl
+/app-template/charts/common/templates/lib/pod/fields/_containers.tpl
+/app-template/charts/common/templates/lib/pod/fields/_dnsPolicy.tpl
+/app-template/charts/common/templates/lib/pod/fields/_initContainers.tpl
+/app-template/charts/common/templates/lib/pod/fields/_serviceAccountName.tpl
+/app-template/charts/common/templates/lib/pod/fields/_volumes.tpl
+/app-template/charts/common/templates/lib/pod/metadata/_annotations.tpl
+/app-template/charts/common/templates/lib/pod/metadata/_labels.tpl
+/app-template/charts/common/templates/lib/pod/_getOption.tpl
+/app-template/charts/common/templates/lib/pod/_spec.tpl
+/app-template/charts/common/templates/lib/pvc/_validate.tpl
+/app-template/charts/common/templates/lib/pvc/_valuesToObject.tpl
+/app-template/charts/common/templates/lib/rawResource/_validate.tpl
+/app-template/charts/common/templates/lib/rawResource/_valuesToObject.tpl
+/app-template/charts/common/templates/lib/routes/_primary.tpl
+/app-template/charts/common/templates/lib/routes/_validate.tpl
+/app-template/charts/common/templates/lib/routes/_valuesToObject.tpl
+/app-template/charts/common/templates/lib/secret/_getByIdentifier.tpl
+/app-template/charts/common/templates/lib/secret/_validate.tpl
+/app-template/charts/common/templates/lib/secret/_valuesToObject.tpl
+/app-template/charts/common/templates/lib/service/_enabled_ports.tpl
+/app-template/charts/common/templates/lib/service/_enabled_services.tpl
+/app-template/charts/common/templates/lib/service/_getByIdentifier.tpl
+/app-template/charts/common/templates/lib/service/_getPortNumberByName.tpl
+/app-template/charts/common/templates/lib/service/_primary_port.tpl
+/app-template/charts/common/templates/lib/service/_primaryForController.tpl
+/app-template/charts/common/templates/lib/service/_validate.tpl
+/app-template/charts/common/templates/lib/service/_valuesToObject.tpl
+/app-template/charts/common/templates/lib/serviceAccount/_validate.tpl
+/app-template/charts/common/templates/lib/serviceAccount/_valuesToObject.tpl
+/app-template/charts/common/templates/lib/serviceMonitor/_enabled_servicemonitors.tpl
+/app-template/charts/common/templates/lib/serviceMonitor/_validate.tpl
+/app-template/charts/common/templates/lib/serviceMonitor/_valuesToObject.tpl
+/app-template/charts/common/templates/lib/statefulset/_validate.tpl
+/app-template/charts/common/templates/lib/statefulset/_valuesToObject.tpl
+/app-template/charts/common/templates/lib/statefulset/_volumeClaimTemplates.tpl
+/app-template/charts/common/templates/loader/_all.tpl
+/app-template/charts/common/templates/loader/_generate.tpl
+/app-template/charts/common/templates/loader/_init.tpl
+/app-template/charts/common/templates/render/_configmaps.tpl
+/app-template/charts/common/templates/render/_controllers.tpl
+/app-template/charts/common/templates/render/_ingresses.tpl
+/app-template/charts/common/templates/render/_networkpolicies.tpl
+/app-template/charts/common/templates/render/_pvcs.tpl
+/app-template/charts/common/templates/render/_rawResources.tpl
+/app-template/charts/common/templates/render/_routes.tpl
+/app-template/charts/common/templates/render/_secrets.tpl
+/app-template/charts/common/templates/render/_serviceaccount.tpl
+/app-template/charts/common/templates/render/_serviceMonitors.tpl
+/app-template/charts/common/templates/render/_services.tpl
+/app-template/charts/common/templates/values/_init.tpl
+/app-template/charts/common/.helmignore
+/app-template/charts/common/Chart.yaml
+/app-template/charts/common/README.md
+/app-template/charts/common/values.schema.json
+/app-template/charts/common/values.yaml
+/app-template/schemas/helmrelease-helm-v2.schema.json
+/app-template/schemas/helmrelease-helm-v2beta2.schema.json
+/app-template/templates/common.yaml
+/app-template/.helmignore
+/app-template/Chart.lock
+/app-template/Chart.yaml
+/app-template/README.md
+/app-template/values.schema.json
+/app-template/values.yaml
