--- a/kubernetes/apps/default/filebrowser/filebrowser.yaml
+++ b/kubernetes/apps/default/filebrowser/filebrowser.yaml
@@ -49,6 +49,9 @@ spec:
           paths:
           - path: /
             pathType: Prefix
+            service:
+              name: main
+              port: 80
         tls:
         - hosts:
           - files.internal.${SECRET_DOMAIN}
