--- a/kubernetes/apps/default/filebrowser/filebrowser.yaml
+++ b/kubernetes/apps/default/filebrowser/filebrowser.yaml
@@ -85,3 +85,9 @@ spec:
       main:
         enabled: true
         serviceName: main
+        endpoints:
+          - port: http
+            scheme: http
+            path: /metrics
+            interval: 1m
+            scrapeTimeout: 10s
