--- a/kubernetes/apps/default/filebrowser/filebrowser.yaml
+++ b/kubernetes/apps/default/filebrowser/filebrowser.yaml
@@ -15,7 +15,7 @@ spec:
         namespace: flux-system
       version: 3.4.0
   interval: 6h0m0s
-  releaseName: default
+  releaseName: filebrowser
   targetNamespace: default
   values:
     # yaml-language-server: $schema=https://raw.githubusercontent.com/bjw-s/helm-charts/common-3.2.0/charts/library/common/values.schema.json
@@ -40,21 +40,20 @@ spec:
       fullnameOverride: filebrowser
     ingress:
       main:
+        enabled: true
         annotations:
           cert-manager.io/cluster-issuer: letsencrypt-production
         className: internal
-        enabled: true
         hosts:
-        - host: files.internal.${SECRET_DOMAIN}
+        - host: &host files.internal.${SECRET_DOMAIN}
           paths:
           - path: /
             pathType: Prefix
             service:
-              name: main
-              port: 80
+              identifier: main
         tls:
         - hosts:
-          - files.internal.${SECRET_DOMAIN}
+          - *host
           secretName: files-tls
     persistence:
       config:
