Update loki chart

--- a/kubernetes/apps/monitoring/loki/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/loki/helmrelease.yaml
@@ -41,6 +41,8 @@ spec:
     deploymentMode: SingleBinary
     singleBinary:
       replicas: 1
+      persistence:
+        storageClass: nfs-client-ssd
       resources:
         limits:
           cpu: 3
