Update loki chart

--- a/kubernetes/apps/monitoring/loki/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/loki/helmrelease.yaml
@@ -19,8 +19,10 @@ spec:
   targetNamespace: monitoring
   values:
     minio:
-      enabled: true
+      enabled: false
     loki:
+      storage:
+        type: filesystem
       commonConfig:
         replication_factor: 1
       schemaConfig:
