Update loki chart

--- a/kubernetes/apps/monitoring/loki/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/loki/helmrelease.yaml
@@ -21,6 +21,7 @@ spec:
     minio:
       enabled: false
     loki:
+      auth_enabled: false
       storage:
         type: filesystem
       commonConfig:
