--- a/kubernetes/apps/monitoring/loki/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/loki/helmrelease.yaml
@@ -18,6 +18,11 @@ spec:
   releaseName: loki
   targetNamespace: monitoring
   values:
+    monitoring:
+      dashboards:
+        enabled: true
+      serviceMonitor:
+        enabled: true
     minio:
       enabled: false
     loki:
