--- a/kubernetes/apps/monitoring/loki/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/loki/helmrelease.yaml
@@ -20,7 +20,7 @@ spec:
   values:
     monitoring:
       dashboards:
-        enabled: true
+        enabled: false
       serviceMonitor:
         enabled: true
     minio:
