--- a/kubernetes/apps/default/overseerr/overseerr.yaml
+++ b/kubernetes/apps/default/overseerr/overseerr.yaml
@@ -62,7 +62,7 @@ spec:
           hajimari.io/enable: "true"
           hajimari.io/group: Media
           hajimari.io/icon: mdi:movie
-          nginx.ingress.kubernetes.io/service-upstream: "false"
+          nginx.ingress.kubernetes.io/service-upstream: "true"
         hosts:
           - host: &host overseerr.internal.${SECRET_DOMAIN}
             paths:
