--- a/kubernetes/apps/istio/istio-ingress.yaml
+++ b/kubernetes/apps/istio/istio-ingress.yaml
@@ -13,14 +13,18 @@ spec:
   chart:
     spec:
       chart: gateway
+      version: 1.23.2
       sourceRef:
         kind: HelmRepository
         name: istio
         namespace: flux-system
       interval: 6h
+      reconcileStrategy: ChartVersion
   values:
     service:
       annotations:
         io.cilium/lb-ipam-ips: "192.168.1.205"
     autoscaling:
       enabled: false
+    labels:
+      istio: ingress
