--- a/kubernetes/apps/istio/istio-ingress.yaml
+++ b/kubernetes/apps/istio/istio-ingress.yaml
@@ -24,6 +24,7 @@ spec:
     service:
       annotations:
         io.cilium/lb-ipam-ips: "192.168.1.205"
+      externalTrafficPolicy: Cluster
     autoscaling:
       enabled: false
     labels:
