--- a/kubernetes/apps/default/filebrowser/filebrowser.yaml
+++ b/kubernetes/apps/default/filebrowser/filebrowser.yaml
@@ -43,6 +43,7 @@ spec:
         enabled: true
         annotations:
           cert-manager.io/cluster-issuer: letsencrypt-production
+          nginx.ingress.kubernetes.io/service-upstream: "true"
         className: internal
         hosts:
         - host: &host files.internal.${SECRET_DOMAIN}
