--- a/kubernetes/apps/default/radarr-new/radarr.yaml
+++ b/kubernetes/apps/default/radarr-new/radarr.yaml
@@ -26,7 +26,7 @@ spec:
         enabled: true
         annotations:
           cert-manager.io/cluster-issuer: letsencrypt-production
-          nginx.ingress.kubernetes.io/service-upstream: "false"
+          nginx.ingress.kubernetes.io/service-upstream: "true"
         hosts:
           - host: radarr.internal.${SECRET_DOMAIN}
             paths:
