--- a/kubernetes/apps/default/prowlarr/secret.sops.yaml
+++ b/kubernetes/apps/default/prowlarr/secret.sops.yaml
@@ -1,8 +1,28 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: prowlarr-apikey
-  namespace: default
+    name: prowlarr-apikey
+    namespace: default
 type: Opaque
 data:
-  APIKEY: ""
+    APIKEY: ""
+sops:
+    kms: []
+    gcp_kms: []
+    azure_kv: []
+    hc_vault: []
+    age:
+        - recipient: age19jc9zp5pc7me0wkx28kc2ypr9qh6t9zphn3fdk63ae9dz9a2h5gsh4w866
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA4L25WTU1wN2YxU0V5MG1m
+            dHJtZkZvTENqUk1ndmozaWIwRGNFZFhGSFJRCnJIY0VsTlNkRnp2bEd3Y0RlRDdG
+            TDlKT3B2QTdxa2lVVDRhb1VGU2xSYVUKLS0tIHVzRFR4OVYvVTdFcS9KVkxucytr
+            VUxETUthYmh4b2QycnU5T0hKVmJlQ28Ks7nUV0RyfKJozVZS5TuyD5+KCU59dAFv
+            Uu2zOoWf9ih0Mi85pNeFeZSIfppeZADBXbJJ7XtxGAIp5jzY4m5Ipg==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2024-10-01T03:41:21Z"
+    mac: ENC[AES256_GCM,data:bXnqnaBPSHfeEdBxYllSV/f6eb2OTcjJapByMCqcWrpN4IgBrCxXcuFVor/u+X9zbUF5sH6hE84Dd7314D8EFePy4dEYiS3AcfZ4pHWhE//m/dY+KIxdK0ZXd3wVOsl8hVvrfO57dazyR9i9q7wdKcv46sJTxqFxmq9YgLCJiCY=,iv:slE6vVT8xouKyyucKTMXn2OJIsVHRSAR54BmMWXrYqM=,tag:LiOu3E3g0nJhaMUo39+6Dw==,type:str]
+    pgp: []
+    encrypted_regex: ^(data|stringData)$
+    version: 3.9.0
