--- a/kubernetes/apps/default/authentik/authentik.yaml
+++ b/kubernetes/apps/default/authentik/authentik.yaml
@@ -25,7 +25,7 @@ spec:
         tag: 2024.8.3
       env:
         - name: AUTHENTIK_DISABLE_UPDATE_CHECK
-          value: true
+          value: "true"
       envFrom:
         - secretRef:
             name: &config authentik-config
