--- a/kubernetes/apps/default/authentik/authentik.yaml
+++ b/kubernetes/apps/default/authentik/authentik.yaml
@@ -31,7 +31,7 @@ spec:
             name: &config authentik-config
     authentik:
       postgresql:
-        user: "kubernetes⏎"
+        user: "kubernetes"
     server:
       metrics:
         enabled: true
