Add persistence to grafana

--- a/kubernetes/apps/monitoring/kube-prometheus-stack/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/kube-prometheus-stack/helmrelease.yaml
@@ -75,6 +75,11 @@ spec:
           - secretName: grafana-tls
             hosts:
               - grafana.internal.${SECRET_DOMAIN}
+      persistence:
+        type: pvc
+        enabled: true
+        size: 5Gi
+        storageClasName: nfs-client-ssd
     kubeApiServer:
       enabled: true
       tlsConfig:
