--- a/kubernetes/apps/default/prowlarr/prowlarr.yaml
+++ b/kubernetes/apps/default/prowlarr/prowlarr.yaml
@@ -17,7 +17,7 @@ spec:
       dashboard:
         data:
           prowlarr.json: '{{ .Files.Get "dashboard.json" | indent 8 }}'
-        enabled: true
+        enabled: false
         labels:
           grafana_dashboard: "1"
     exportarrImage:
