--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -3,30 +3,25 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ./namespace.yaml
-  #- ./echo-server/ks.yaml
-#  - ./hajimari/ks.yaml
   - ./pvc-ssd.yaml
   - ./sonarr
   - ./overseerr
   - ./jackett
-  #- ./tubearchivist
-  # - ./ha-ingress
-  #- ./bazarr
-  # - ./plane-ingress
-  # - ./lidarr-ingress
-  # - ./filebrowser-ingress
-  # - ./plex-ingress
-  # - ./tautulli-ingress
-  # - ./ptero-ingress
-  # - ./qbittorrent
   - ./nfs-subdir-external-ssd
-#  - ./portainer
   - ./tubearchivist
   - ./plex
-#  - ./network-policy.yaml
-#  - ./peer-auth-policy.yaml
   - ./tautulli
   - ./radarr-new
   - ./prowlarr
   - ./filebrowser
   - ./authentik
+  - ./proxmox
+
+configMapGenerator:
+  - name: general-dashboards
+    namespace: default
+    options:
+      labels:
+        grafana_dashboard: "1"
+    files:
+      - ./general-dashboards/media-dashboard.json
