--- a/kubernetes/apps/flux-system/capacitor/ks.yaml
+++ b/kubernetes/apps/flux-system/capacitor/ks.yaml
@@ -1,28 +1,16 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: cluster-apps-capacitor-rbac
+  name: capacitor
   namespace: flux-system
 spec:
-  interval: 6h
+  targetNamespace: flux-system
+  interval: 1h
+  retryInterval: 2m
+  timeout: 5m
+  wait: true
   prune: true
+  path: "./"
   sourceRef:
-    kind: GitRepository
-    name: home-kubernetes
-  path: ./kubernetes/apps/flux-system/capacitor/rbac
----
-apiVersion: kustomize.toolkit.fluxcd.io/v1
-kind: Kustomization
-metadata:
-  name: cluster-apps-capacitor
-  namespace: flux-system
-spec:
-  interval: 6h
-  prune: true
-  sourceRef:
-    kind: GitRepository
-    name: home-kubernetes
-  path: ./kubernetes/apps/flux-system/capacitor/app
-  dependsOn:
-    - name: cluster-apps-capacitor-rbac
-      namespace: flux-system
+    kind: OCIRepository
+    name: capacitor
