--- a/kubernetes/apps/default/influx/external-service.yaml
+++ b/kubernetes/apps/default/influx/external-service.yaml
@@ -5,8 +5,7 @@ metadata:
   namespace: default
 spec:
   type: ExternalName
-  externalIPs:
-    - 192.168.1.166
+  externalName: 192.168.1.166
   ports:
     - port: 8086
       name: http
