Add capacitor ingress

--- a/kubernetes/apps/flux-system/kustomization.yaml
+++ b/kubernetes/apps/flux-system/kustomization.yaml
@@ -5,7 +5,7 @@ resources:
   - ./namespace.yaml
   - ./webhooks/ks.yaml
   - ./pod-monitor.yaml
-  - ./capacitor/ks.yaml
+  - ./capacitor
 configMapGenerator:
   - name: flux-grafana-dashboards
     namespace: monitoring
