--- a/kubernetes/apps/flux-system/capacitor/app/ks.yaml
+++ b/kubernetes/apps/flux-system/capacitor/app/ks.yaml
@@ -16,6 +16,13 @@ spec:
     name: capacitor
   patches:
     - patch: |
+        apiVersion: rbac.authorization.k8s.io/v1
+        kind: ClusterRole
+        metadata:
+          name: capacitor
+          labels:
+            kustomize.toolkit.fluxcd.io/name: capacitor
+            kustomize.toolkit.fluxcd.io/namespace: flux-system
         rules:
           - verbs:
               - get
@@ -40,10 +47,10 @@ spec:
               - list
               - patch
             apiGroups:
+              - infra.contrib.fluxcd.io
               - source.toolkit.fluxcd.io
               - kustomize.toolkit.fluxcd.io
               - helm.toolkit.fluxcd.io
-              - infra.contrib.fluxcd.io
             resources:
               - terraforms
               - gitrepositories
