--- a/kubernetes/apps/monitoring/kube-prometheus-stack/kustomization.yaml
+++ b/kubernetes/apps/monitoring/kube-prometheus-stack/kustomization.yaml
@@ -2,6 +2,8 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - helmrelease.yaml
+  - ./secret.sops.yaml
+  - ./influx-datasource.yaml
 configMapGenerator:
   - name: flux-kube-state-metrics-config
     namespace: monitoring
