--- a/kubernetes/apps/monitoring/kube-prometheus-stack/influx-datasource.yaml
+++ b/kubernetes/apps/monitoring/kube-prometheus-stack/influx-datasource.yaml
@@ -7,7 +7,7 @@ metadata:
     grafana_datasource: "1"
 data:
   datasource.yaml: |-
-    apiVersion: v1
+    apiVersion: 1
     datasources:
       - name: InfluxDB
         type: influxdb
