--- a/kubernetes/apps/flux-system/kustomization.yaml
+++ b/kubernetes/apps/flux-system/kustomization.yaml
@@ -6,15 +6,15 @@ resources:
   - ./webhooks/ks.yaml
   - ./pod-monitor.yaml
   - ./capacitor
-configMapGenerator:
-  - name: flux-grafana-dashboards
-    namespace: monitoring
-    files:
-      - dashboards/cluster.json
-      - dashboards/control-plane.json
-      - dashboards/logs.json
-    options:
-      labels:
-        grafana_dashboard: "1"
-        app.kubernetes.io/part-of: flux
-        app.kubernetes.io/component: monitoring
+#configMapGenerator:
+#  - name: flux-grafana-dashboards
+#    namespace: monitoring
+#    files:
+#      - dashboards/cluster.json
+#      - dashboards/control-plane.json
+#      - dashboards/logs.json
+#    options:
+#      labels:
+#        grafana_dashboard: "1"
+#        app.kubernetes.io/part-of: flux
+#        app.kubernetes.io/component: monitoring
