Fix grafana missing influxdb secret

--- a/kubernetes/apps/monitoring/kube-prometheus-stack/helmrelease.yaml
+++ b/kubernetes/apps/monitoring/kube-prometheus-stack/helmrelease.yaml
@@ -64,8 +64,7 @@ spec:
         prune: true
         datasources:
           enabled: true
-      envFromSecrets:
-        - name: influx-credentials
+      envFromSecret: influx-credentials
       ingress:
         enabled: true
         ingressClassName: internal
