--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -15,14 +15,14 @@ resources:
   - ./prowlarr
   - ./filebrowser
   - ./authentik
-#  - ./proxmox
+  - ./proxmox
   - ./influx
 
-#configMapGenerator:
-#  - name: general-dashboards
-#    namespace: default
-#    options:
-#      labels:
-#        grafana_dashboard: "1"
-#    files:
-#      - ./general-dashboards/media-dashboard.json
+configMapGenerator:
+  - name: general-dashboards
+    namespace: default
+    options:
+      labels:
+        grafana_dashboard: "1"
+    files:
+      - ./general-dashboards/media-dashboard.json
